# multiple-network-poroelasticity

./: .gitignore  CMakeLists.txt  README.md  uncrustify.cfg  uncrustify.sh
example/: four_compartment.py  grid_study.py  monte_carlo.py  simple.py
pysrc/: __init__.py
pysrc/mpet/: __init__.py  four_compartment.py  io.py  profiling.py
src/: CMakeLists.txt  FourCompartmentPoro.cpp  FourCompartmentPoro.h  libpympet.cpp
